Fav Locations Saved and Displayed!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CoPilot"
         tools:targetApi="31">
-        <activity
-            android:name=".SettingsActivity"
-            android:exported="false" />
+
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -35,8 +33,15 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBwZVqC8QGNdxtJQHqGv9OYz9QqenZ800Q" />
+            android:value="YOUR_API_KEY" />
 
+        <activity
+            android:name=".FavActivity"
+            android:exported="false"
+            android:label="@string/title_activity_fav" />
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
         <activity
             android:name=".RoutesActivity"
             android:exported="false"
