--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,7 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.4+'
     implementation 'com.github.jd-alexander:library:1.1.0'
 
-   // implementation'de.hdodenhof:circleimageview:3.0.0'
+    //allows users to login with facebook
+    implementation 'com.facebook.android:facebook-login:latest.release'
+
 }
