--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CoPilot"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:configChanges="locale|orientation">
 
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
