Facebook Login & sharing user location

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
     //allows users to login with google
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
 
+    //for facebook signin
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+
+
 }
